--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "1-Passport-Example",
+  "name": "1-passport-example",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "npm run lint",
@@ -31,5 +30,14 @@
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dorinetk/eventplanner.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Dorinetk/eventplanner/issues"
+  },
+  "homepage": "https://github.com/Dorinetk/eventplanner#readme",
+  "description": ""
 }
